--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -29,7 +29,6 @@
                 </ul>
             </nav>
         </header>
-        {% block content %}
-        {% endblock content %}
+        {% block content %} {% endblock content %}
     </body>
 </html>
