--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
-{% block content%}
+{% extends 'base.html' %} {% block content%}
     <main>
         <div>
             <h1>My Projects</h1>
+
             <table>
                 <tr>
                     <th>Name</th>
@@ -10,7 +10,9 @@
                 </tr>
                 {% for project in project_list %}
                     <tr>
-
+                        <td>
+                            {{project.name}}
+                        </td>
                         <td>{{project.tasks.all|length}}</td>
                     </tr>
                 {% empty %}
