--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -2,6 +2,9 @@
     <main>
         <div>
             <h1>My Projects</h1>
+            <p>
+                <a href="{% url 'create_project' %}">Create a new project</a>
+            </p>
             <table>
                 <tr>
                     <th>Name</th>
