--- a/tasks/templates/tasks/list.html
+++ b/tasks/templates/tasks/list.html
@@ -1,45 +1,33 @@
 {% extends 'base.html' %} {% block content%}
-
-<main>
-    <div>
-        <h1>My Tasks</h1>
-        {% if task_list|length == 0 %}
-            <p>You have no tasks</p>
-
-
-        {% else %}
-        <table>
-        <thead>
-
-            <tr>
-                <th>Name</th>
-                <th>Start Date</th>
-                <th>End Date</th>
-                <th>Is completed</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for assigned in task_list %}
+    <main>
+        <div>
+            <h1>My Tasks</h1>
+            <table>
                 <tr>
-                    <td>{{ assigned.name }}</td>
-                    <td>{{ assigned.start_date }}</td>
-                    <td>{{ assigned.end_date }}</td>
-                    <td>
-                        {% if is_completed|length == 0 %}
-                            <form method="post">
-                                {% csrf_token %}
-                                <input type="hidden" name="is_completed" value="True">
-                                <button>Complete</button>
-                        {% else %}
-                            {{ assigned.is_completed }}
-                            </form>
-                        {% endif %}
-                    </td>
+                    <th>Name</th>
+                    <th>Start date</th>
+                    <th>End date</th>
+                    <th>Is completed</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    {% endif %}
-    </div>
+                {% for task in task_list %}
+                    <tr>
+                        <td>{{task.name}}</td>
+                        <td>{{task.start_date}}</td>
+                        <td>{{task.due_date}}</td>
+                        <td>
+                            {% if task.is_completed == False %}
+                                <form method="post" action="{% url 'complete_task' task.id %}">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="is_completed" value="True" />
+                                    <button>Complete</button>
+                                </form>
+                            {% else %} Done {% endif %}
+                        </td>
+                    </tr>
+                {% empty %}
+                    <p>You have no tasks</p>
+                {% endfor%}
+            </table>
+        </div>
     </main>
-    {% endblock content %}
+{% endblock content %}
