--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -8,7 +8,6 @@
         <title>Projects</title>
         <link rel="stylesheet" href="{% static 'css/app.css' %}" />
     </head>
-
     <body>
         <header>
             <nav>
@@ -33,11 +32,11 @@
                         <li>
                             <a href="{% url 'signup' %}">Signup</a>
                         </li>
-
                     {% endif %}
                 </ul>
             </nav>
         </header>
-        {% block content %} {% endblock content %}
+        {% block content %}
+        {% endblock content %}
     </body>
 </html>
