--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -1,35 +1,35 @@
 {% extends 'base.html' %}
-{% block content%}
-{% load markdownify %}
-<main>
-    <div>
-        <h1>{{ project.name }}</h1>
-        <p>{{ project.description|markdownify }}</p>
-        <h2>Tasks</h2>
-        <p><a href="{% url 'create_task' %}">Create a new task</a></p>
-        {% if project.tasks.all|length == 0 %}
-            <p>This project has no tasks</p>
-        {% endif %}
-        <table>
-            <thead>
-                <th>Name</th>
-                <th>Assignee</th>
-                <th>Start date</th>
-                <th>Due date</th>
-                <th>Is completed</th>
-            </thead>
-            <tbody>
-                <tr>
-                    {% for tasks in project.tasks.all %}
-                        <td>{{ tasks.name }}</td>
-                        <td>{{ tasks.assignee }}</td>
-                        <td>{{ tasks.start_date }}</td>
-                        <td>{{ tasks.due_date }}</td>
-                        <td>{{ tasks.is_completed }}</td>
+{% block content %}
+    {% load markdownify %}
+    <main>
+        <div>
+            <h1>{{ project.name }}</h1>
+            <p>{{ project.description|markdownify }}</p>
+            <h2>Tasks</h2>
+            <p>
+                <a href="{% url 'create_task' %}">Create a new task</a>
+            </p>
+            {% if project.tasks.all|length == 0 %}<p>This project has no tasks</p>{% endif %}
+            <table>
+                <thead>
+                    <th>Name</th>
+                    <th>Assignee</th>
+                    <th>Start date</th>
+                    <th>Due date</th>
+                    <th>Is completed</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        {% for tasks in project.tasks.all %}
+                            <td>{{ tasks.name }}</td>
+                            <td>{{ tasks.assignee }}</td>
+                            <td>{{ tasks.start_date }}</td>
+                            <td>{{ tasks.due_date }}</td>
+                            <td>{{ tasks.is_completed }}</td>
                         </tr>
-                        </tbody>
-                    {% endfor %}
-                </table>
-            </div>
-        </main>
+                    </tbody>
+                {% endfor %}
+            </table>
+        </div>
+    </main>
 {% endblock content %}
