--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content%}
+{% extends 'base.html' %}
+{% block content %}
     <main>
         <div>
             <h1>My Projects</h1>
@@ -13,9 +14,9 @@
                 {% for project in project_list %}
                     <tr>
                         <td>
-                            <a href="{% url 'show_project' project.id %}">{{project.name}}</a>
+                            <a href="{% url 'show_project' project.id %}">{{ project.name }}</a>
                         </td>
-                        <td>{{project.tasks.all|length}}</td>
+                        <td>{{ project.tasks.all|length }}</td>
                     </tr>
                 {% empty %}
                     <p>You are not assigned to any projects</p>
