--- a/projects/templates/projects/create.html
+++ b/projects/templates/projects/create.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
     <main>
-        <div>
+        <div class="container">
+
             <h1>Create a new project</h1>
-            <form method="post">
+            <form class="hidden" method="post">
                 {% csrf_token %} {{ form.as_p }}
-                <button>Create</button>
+                <button class="btn-primary">Create</button>
             </form>
         </div>
     </main>
