--- a/tasks/templates/tasks/new.html
+++ b/tasks/templates/tasks/new.html
@@ -5,7 +5,7 @@
             <h1>Create a new task</h1>
             <form method="post">
                 {% csrf_token %} {{ form.as_p }}
-                <button>Create</button>
+                <button class="btn-primary">Create</button>
             </form>
         </div>
     </main>
