--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -9,7 +9,7 @@
                 <type="text" name="username">
                 <type="text" name="password1">
                 <type="text" name="password2">
-                <button>Signup</button>
+                <button class="btn-primary">Signup</button>
             </form>
         </div>
     </main>
